# agv_robot

simulation_pkg/: package.xml
simulation_pkg/config/: drive_bot.rviz  gz_bridge.yaml  robot_controllers.yaml
simulation_pkg/description/: camera.xacro  camera_classic.xacro  gazebo_control.xacro  lidar.xacro  lidar_classic.xacro  robot_core.xacro  robot_description.urdf  robot_urdf.xacro  ros2_control.xacro
simulation_pkg/launch/: gaz_sim_launch.py  rsp_launch.py  sim_launch.py
simulation_pkg/models/: base_foot_link.STL
simulation_pkg/worlds/: industrial-warehouse.sdf  simple_sim_world.sdf
view_robot_pkg/meshes/: base_link.STL  camera_link.STL  front_caster_link.STL  left_wheel_link.STL  rear_caster_link.STL  right_wheel_link.STL
view_robot_pkg/urdf/: robot_description.urdf
